--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
         <div class="container">
             <h1 class="Title">BeatSesh</h1>
             <p class="Description">The collaborative tool for listening to music with friends. </p>
+            <!--
             <hr>
             <p class="Text">While this tool is still in development, you can still view a basic outline of the finished product <a href="" style="color: black;"> <strong>here</strong></a>.</p>
+            -->
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary" type="button">Find Group!</button>
+                </div>
+                <input type="text" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+            </div>
       </div>
     </div>
     
